--- a/css/style.css
+++ b/css/style.css
@@ -1,126 +1,142 @@
-@font-face{
-  font-family: 'Open-sans-semibold';
+@font-face {
+  font-family: 'Open-sans';
   src: url(/Fonts/open-sans-semibold.ttf);
-  font-weight: 400
+  font-weight: 600;
 }
 
-@font-face{
-  font-family: 'Open-sans-extrabold';
+@font-face {
+  font-family: 'Open-sans';
   src: url(/Fonts/open-sans-extrabold.ttf);
-  font-weight: 400
+  font-weight: 800;
 }
 
-@font-face{
-  font-family: 'Open-sans-bold2';
+@font-face {
+  font-family: 'Open-sans';
   src: url(/Fonts/open-sans-bold2.ttf);
-  font-weight: 400;
+  font-weight: 700;
 }
 
-body{
-  font-family: Open_sans;
+body {
+  font-family: 'Open-sans';
   font-size: 16px;
   line-height: 18px;
-}
-
-.header-nav{
-  list-style-type: none;
   color:#fff;
-  font-family: 'Open-sans-semibold';
+}
+
+.header-nav {
+  list-style-type: none;
+  font-weight: 800;
   font-size: 16px;
+  line-height: 22px;
 }
 
-.header-art{
-  font-family: 'Open-sans-semibold';
+.header-art {
+  font-weight: 800;
   color: #3A68B8;
-  font-size: 22.55px;
+  font-size: 31px;
+  line-height: 31px;
 }
 
-.header-nav a{
+.header-nav a {
   text-decoration: none;
-  color: #fff;
+  color:#fff;
   text-transform: initial;
 }
 
-.section3-headline{
-  font-family: 'Open-sans-bold2';
+.section3-headline {
+  font-weight: 600;
   font-size: 25px;
-  color: #fff;
+  line-height: 31px;
 }
 
-.section3-text{
-  font-family: 'Open-sans-semibold';
+.section3-text, .section2-text {
+  font-weight: 800;
   font-size: 16px;
-  color: #fff;
+  line-height: 26px;
 }
 
-.section1{
-  font-family: 'Open-sans-semibold';
+.section1 {
+  font-weight: 800;
   font-size: 18px;
-  color: #fff;
+  line-height: 29px;
 }
 
-.section1-headline{
-  font-family: 'Open-sans-extrabold';
+.section1 h1 {
+  font-weight: 700;
   font-size: 55px;
-  color: #fff;
+  line-height: 72px;
 }
 
-.section1-next{
-  font-family: 'Open-sans-semibold';
+.section1-subtitle {
+  font-weight: 800;
   font-size: 18px;
   color: #3A68B8;
   text-transform: uppercase;
+  line-height: 29;
 }
 
-.section1-button a{
+.section1 a {
   text-decoration: none;
-  color: #fff;
+  color:#fff;
   text-transform: initial;
-  font-family: 'Open-sans-semibold';
+  font-weight: 800;
   font-size: 20px;
+  line-height: 27px;
 }
 
-.section2-headline{
-  color: #fff;
-  font-family: 'Open-sans-bold2';
+.section2-headline {
+  font-weight: 600;
   font-size: 40px;
+  line-height: 52px;
 }
 
-.section2-text{
+.section2-text a {
   color: #fff;
-  font-size: 16;
-  font-family: 'open-sans-semibold';
-}
-
-.section2-text a{
-  color: #fff;
-  font-size: 16;
-  font-family: 'open-sans-semibold';
+  font-size: 16px;
+  font-weight: 800;
   text-decoration: none;
+  line-height: 22px;
 }
 
-.footer-art{
+.footer-subtitle {
   color: #3A68B8;
-  font-family: 'open-sans-semibold';
-  font-size: 15.96px;
+  font-weight: 800;
+  font-size: 16px;
+  line-height: 22px;
 }
 
-.footer-text{
-  color: #fff;
-  font-family: 'open-sans-semibold';
+.footer-text {
+  font-weight: 800;
   font-size: 14px;
+  line-height: 18px;
 }
 
-.footer-text a{
+.footer-text a {
   color: #fff;
-  font-family: 'open-sans-semibold';
+  font-weight: 800;
   font-size: 14px;
   text-decoration: none;
+  line-height: 18px;
 }
 
-.footer-text li{
-  color: #fff;
-  font-family: 'open-sans-semibold';
+.footer-text li {
+  font-weight: 800;
   font-size: 14px;
   list-style-type: none;
+  line-height: 18px;
+}
+
+.footer-heads {
+  font-weight: 800;
+  font-size: 16px;
+  text-decoration: none;
+  line-height: 20px;
+}
+
+.footer-heads a {
+  color: #fff;
+  font-weight: 800;
+  font-size: 16px;
+  text-decoration: none;
+  line-height: 20px;
 }
