--- a/css/style.css
+++ b/css/style.css
@@ -79,16 +79,17 @@ body {
   font-weight: 700;
   font-size: 25px;
   line-height: 31px;
-  opacity: 70%;
   text-align: center;
+  margin-left: 30px;
   width: 302px;
+  margin-top: 163px;
 }
 
 .section3-div .section3-text {
   font-weight: 600;
   font-size: 16px;
   line-height: 26px;
-  opacity: 70%;
+  margin-left: 30px;
   text-align: center;
   width: 302px;
 }
@@ -108,38 +109,51 @@ body {
   height: 389px;
   margin: 0 30px 65px 0;
   border-radius: 10px;
-  opacity: 0.1;
-  background: linear-gradient(180deg, rgba(255, 255, 255, 0.2) -41.9%, #fff 115.68%);
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0) -41.9%, rgba(255, 255, 255, 0.15) 115.68%);
+}
+
+.section3-div:last-child {
+  margin-right: 0;
 }
 
 .section3-photo1 {
   position: absolute;
-  top: 2046px;
+  width: 98px;
+  height: 103px;
+  top: 30px;
   left: 139px;
 }
 
 .section3-photo2 {
   position: absolute;
-  top: 2029px;
+  top: 30px;
   left: 519px;
+  width: 98px;
+  height: 103px;
 }
 
 .section3-photo3 {
   position: absolute;
-  top: 2029px;
+  top: 30px;
   left: 911px;
+  width: 98px;
+  height: 103px;
 }
 
 .section3-photo4 {
   position: absolute;
-  top: 2029px;
+  top: 30px;
   left: 1303px;
+  width: 98px;
+  height: 103px;
 }
 
 .section3-photo5 {
   position: absolute;
-  top: 2029px;
+  top: 30px;
   left: 1695px;
+  width: 98px;
+  height: 103px;
 }
 
 .section2-text {
@@ -149,6 +163,7 @@ body {
   opacity: 70%;
   margin-left: 661px;
   margin-top: 49px;
+  margin-bottom: 0;
   width: 460px;
 }
 
@@ -208,14 +223,11 @@ body {
   font-size: 20px;
   line-height: 27px;
   margin-top: 65px;
-  padding-right: 116px;
+  margin-right: 20px;
   background-color:#3A68B8;
   border-radius: 5px;
   padding: 15px 30px;
-}
-
-.section2 {
-  width: 484;
+  display: inline-block;
 }
 
 .section2-headline {
@@ -233,10 +245,11 @@ body {
   text-decoration: none;
   line-height: 22px;
   margin-left: 661px;
-  margin-top: 46px;
+  margin-top: 31px;
   border-radius: 5px;
   padding: 15px 30px;
   background-color: #3A68B8;
+  display: inline-block;
 }
 
 .section2-photo {
@@ -250,7 +263,7 @@ body {
   margin-top: 970px;
 }
 
-.section4 h2 {
+.section4 h1 {
   font-weight: 700;
   font-size: 40px;
   line-height: 52px;
@@ -267,9 +280,15 @@ body {
   margin-top: 20px;
 }
 
+.section4-photo {
+  top: 2690px;
+  left: 891px;
+  position: absolute;
+}
+
 .footer-subtitle {
   color: #3A68B8;
-  font-weight: 00;
+  font-weight: 600;
   font-size: 16px;
   line-height: 22px;
 }
@@ -278,6 +297,15 @@ body {
   font-weight: 600;
   font-size: 14px;
   line-height: 18px;
+  margin-top: 189px;
+  margin-left: 0;
+}
+
+.footer-cont {
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 18px;
+  margin-top: 20px;
 }
 
 .footer-text {
@@ -285,6 +313,10 @@ body {
   font-size: 14px;
   line-height: 18px;
   opacity: 60%;
+}
+
+.footer-text:last-child {
+  margin-top: 25px;
 }
 
 .footer a {
@@ -300,10 +332,66 @@ body {
   list-style-type: none;
 }
 
+.footer-bigList {
+  display: flex;
+  flex-direction: row;
+  margin-top: 189px;
+  margin-left: 0;
+}
+
+.footer-div1 h4 {
+  margin-top: 12px;
+  margin-bottom: 0;
+}
+
+.footer-div1 {
+  padding-top: 77px;
+  width: 281px;
+  margin-left: 0;
+}
+
+.footer-text-div1 {
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 18px;
+  opacity: 60%;
+  padding: 10px 0;
+}
+
+.footer-ul {
+  padding-top: 100px;
+  width: 165px
+  margin-right: 30px;
+}
+
+.footer-ul li {
+  margin-top: 20px;
+}
+
+.footer-about {
+  padding-top: 104px;
+  margin-left: 31px;
+  width: 261px;
+}
+
+.footer-about .footer-soc_med {
+  display: flex;
+  flex-direction: row;
+  margin-left: 0;
+  padding-left: 0;
+  margin-top: 14px;
+  margin-bottom: 53px;
+}
+
+.footer-soc_med li {
+  margin-right: 25px;
+}
+
 .footer .footer-heads {
   font-weight: 600;
   font-size: 16px;
   text-decoration: none;
   line-height: 20px;
   opacity: 100%;
+  padding-bottom: 7px;
 }
