--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,17 @@
   font-weight: 700;
 }
 
+.pixel-perfect {
+  width: 1920px;
+  height: 3850px;
+  position: absolute;
+  background-image: url('/Pics/Desktop.png');
+  top: 0;
+  left: 0;
+  opacity: 0.7;
+  z-index: 5;
+}
+
 html {
   width: 1920px;
   height: 3850px;
@@ -48,23 +59,8 @@ body {
   display: flex;
   flex-direction: row;
   width: 411px;
-  align-items: center;
   justify-content: center;
-}
-
-.header-art {
-  text-decoration: none;
-  font-weight: 600;
-  color: #3A68B8;
-  font-size: 23px;
-  line-height: 31px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-.header-art span {
-  margin: 0 15px;
+  margin: 15px 270px;
 }
 
 .header-nav a {
@@ -72,7 +68,35 @@ body {
   color:#fff;
   text-transform: capitalize;
   margin-right: 40px;
-  margin-top: 3px;
+  margin-top: 0;
+}
+
+.header-button {
+  background-color:#3A68B8;
+  border-radius: 5px;
+  padding: 15px 30px;
+  display: inline-block;
+  width: 112px;
+  margin-left: 216px;
+  top: -24px;
+}
+
+.header-art {
+  text-decoration: none;
+  font-weight: 600;
+  color: #3A68B8;
+  font-size: 22px;
+  line-height: 31px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-top: -24px;
+}
+
+.header-art span {
+  margin-left: 15px;
+  width: 230px;
+  margin-top: -3px;
 }
 
 .section3-div .section3-headline {
@@ -90,6 +114,7 @@ body {
   font-size: 16px;
   line-height: 26px;
   margin-left: 30px;
+  margin-top: 30px;
   text-align: center;
   width: 302px;
 }
@@ -112,15 +137,19 @@ body {
   background: linear-gradient(180deg, rgba(255, 255, 255, 0) -41.9%, rgba(255, 255, 255, 0.15) 115.68%);
 }
 
+.section3-div:first-child {
+  margin-left: -5px;
+}
+
 .section3-div:last-child {
   margin-right: 0;
 }
 
 .section3-photo1 {
   position: absolute;
-  width: 98px;
-  height: 103px;
-  top: 30px;
+  width: 73px;
+  height: 69px;
+  top: 47px;
   left: 139px;
 }
 
@@ -180,12 +209,16 @@ body {
   line-height: 29px;
   opacity: 70%;
   width: 558px;
+  margin-top: 40px;
+  margin-bottom: 0;
 }
 
 .main-heading {
-  font-weight: 700;
+  font-weight: 800;
   font-size: 55px;
   line-height: 72px;
+  margin-top: 10px;
+  margin-bottom: 0;
 }
 
 .section1-subtitle {
@@ -194,12 +227,13 @@ body {
   color: #3A68B8;
   text-transform: uppercase;
   line-height: 29px;
-  margin-top: 160px;
+  margin-top: 130px;
+  margin-bottom: 0;
 }
 
 .section1-listofpics {
   list-style-type: none;
-  margin-top: 215px;
+  margin-top: 197px;
   display: flex;
   flex-direction: row;
   padding-left: 0;
@@ -211,7 +245,7 @@ body {
 
 .section1-photo {
   top: 149px;
-  left: 1106px;
+  left: 1101px;
   position: absolute;
 }
 
@@ -222,19 +256,38 @@ body {
   font-weight: 600;
   font-size: 20px;
   line-height: 27px;
-  margin-top: 65px;
-  margin-right: 20px;
+  margin-top: 47px;
+  margin-right: 19px;
   background-color:#3A68B8;
   border-radius: 5px;
-  padding: 15px 30px;
+  padding: 15px 30px 15px 30px;
   display: inline-block;
+}
+
+.section1-minidiv {
+  display: flex;
+  flex-direction: row;
+}
+
+.section1-buttons img {
+  padding-right: 10px;
+  width: 27px;
+  height: 26px;
+}
+
+.section1-buttons:last-child {
+  width: 189px;
+  padding: 15px 0 14px 30px;
+  display: flex;
+  flex-direction: row;
+  margin-right: 0;
 }
 
 .section2-headline {
   font-weight: 700;
   font-size: 40px;
   line-height: 52px;
-  margin-top: 408px;
+  margin-top: 405px;
   margin-left: 661px;
 }
 
@@ -260,7 +313,7 @@ body {
 
 .section4 {
   width: 460px;
-  margin-top: 970px;
+  margin-top: 1015px;
 }
 
 .section4 h1 {
@@ -281,7 +334,7 @@ body {
 }
 
 .section4-photo {
-  top: 2690px;
+  top: 2625px;
   left: 891px;
   position: absolute;
 }
@@ -297,7 +350,7 @@ body {
   font-weight: 600;
   font-size: 14px;
   line-height: 18px;
-  margin-top: 189px;
+  margin-top: 213px;
   margin-left: 0;
 }
 
