--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,7 @@ html {
   height: 3850px;
   margin: 0 auto;
   padding: 0;
+  background-color: #020a18;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
